--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@
 <body>
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="index.js"></script>    
+<script type="text/javascript" src="data.js"></script> 
